added python picture management stuff

--- a/orthodocs/artifacts/256x256/Makefile
+++ b/orthodocs/artifacts/256x256/Makefile
@@ -2,9 +2,9 @@
 
 SIZE		:= $(notdir $(CURDIR))
 CURR_BASE	:= $(notdir $(CURDIR:/$(SIZE)=))
-PICTURES	:= fig-FL_TSP_E1515.png fig-FL_TSP_E2020.png fig-FL_TSP_E2020t.png fig-FL_TSP_E2040.png fig-FL_TSP_E2060.png fig-FL_TSP_E2080.png fig-FL_TSP_E3030.png fig-FL_TSP_E3060.png fig-FL_TSP_E4040.png fig-FL_TSP_E4040t.png fig-FL_TSP_E4080.png
-comma		:= ,
-CMD			:= $(SCAD) --hardwarnings --imgsize $(subst x,$(comma),$(SIZE)) --projection ortho --camera=0,0,0,0,0,0,200 --viewall
+PICTURES	:= fig-FL_TSP_E1515.png fig-FL_TSP_E2020.png fig-FL_TSP_E2020t.png fig-FL_TSP_E2040.png fig-FL_TSP_E2060.png fig-FL_TSP_E2080.png fig-FL_TSP_E3030.png fig-FL_TSP_E3060.png fig-FL_TSP_E4040.png fig-FL_TSP_E4040t.png fig-FL_TSP_E4080.png \
+fig-TS15_section.png
+CMD			:= $(SCAD) --hardwarnings --imgsize $(subst x,$(COMMA),$(SIZE)) --projection ortho --camera=0,0,0,0,0,0,200 --viewall
 
 top:
 	@$(MAKE) -C $(realpath ../../..) orthodocs/artifacts/256x256/all
@@ -15,6 +15,11 @@ all:	$(PICTURES)
 
 clean:
 	@rm -f *.png *.deps
+
+fig-TS15_section.png: $(TESTS)/artifacts/din_rails-test.scad $(TESTS)/artifacts/din_rails-test.json
+	$(call target-prologue)
+	$(call make-picture,$(SIZE),$(call make-camera,-0.61,4.66,0,0,0,0,30.92),ortho)
+	$(call target-epilogue-success)
 
 fig-FL_TSP_E1515.png: $(TESTS)/$(CURR_BASE)/tprofiles-test.scad $(TESTS)/$(CURR_BASE)/tprofiles-test.json
 	$(call target-prologue)
