--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,3 +1,6 @@
+# depending on the installed docker engine (docker vs podman) the image removal
+# command could differ
+DOCKER_RMI		= $(shell file $$(which podman) | (grep ELF >&/dev/null && echo docker rmi --ignore || echo docker rmi))
 # DOCKER_RUN gets '-it' options only if the current bash has tty attached to
 # stdin
 DOCKER_RUN		= docker run -v $(PRJ_ROOT):/import:Z $(if $(patsubst not a tty,,$(shell tty)),-it) --rm
@@ -8,9 +11,11 @@ DOCKER_BUILD	= docker build
 FEDORA_BUILD	= $(DOCKER_BUILD) -t ofl:fedora
 UBUNTU_BUILD	= $(DOCKER_BUILD) -t ofl:ubuntu
 
+$(info docker rmi: $(DOCKER_RMI))
+
 clean:
 	$(call aggregate-prologue)
-	docker rmi --ignore ofl:fedora ofl:ubuntu
+	$(DOCKER_RMI) ofl:fedora ofl:ubuntu
 	$(call aggregate-epilogue)
 
 # build docker image: pre-requisite for all fedora targets
