--- a/docker/Makefile
+++ b/docker/Makefile
@@ -11,6 +11,8 @@ DOCKER_BUILD	= docker build
 FEDORA_BUILD	= $(DOCKER_BUILD) -t ofl:fedora
 UBUNTU_BUILD	= $(DOCKER_BUILD) -t ofl:ubuntu
 
+$(info 'docker rmi: $(DOCKER_RMI)')
+
 clean:
 	$(call aggregate-prologue)
 	$(DOCKER_RMI) ofl:fedora ofl:ubuntu
