--- a/tests/artifacts/joints-test.conf
+++ b/tests/artifacts/joints-test.conf
@@ -163,5 +163,5 @@ joint   =
     ) :
   undef;
 
-fl_jnt_joint(verbs, joint, octant=octant, direction=direction, debug=debug, \$DIM_MODE=DIM_MODE);
+fl_jnt_joint(verbs, joint, octant=octant, direction=direction, debug=debug);
 "
