--- a/docker/Makefile
+++ b/docker/Makefile
@@ -12,11 +12,9 @@ DOCKER_BUILD	= docker build
 FEDORA_BUILD	= $(DOCKER_BUILD) -t ofl:fedora
 UBUNTU_BUILD	= $(DOCKER_BUILD) -t ofl:ubuntu
 
-$(info docker rmi '$(DOCKER_RMI)')
-
 clean:
 	$(call aggregate-prologue)
-	$(DOCKER_RMI) ofl:fedora ofl:ubuntu || true
+	@$(DOCKER_RMI) ofl:fedora ofl:ubuntu || true
 	$(call aggregate-epilogue)
 
 # build docker image: pre-requisite for all fedora targets
