--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -120,7 +120,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Docker image build, test and push
+      - name: Docker image build, document, test and push
         if: steps.docker.outputs.changed=='yes'
         run: |
           make -s docker/ubuntu
@@ -129,7 +129,7 @@ jobs:
           docker tag ${IMAGE_NAME} ${DOCKER_IMAGE}
           docker push ${DOCKER_IMAGE}
 
-      - name: Docker image pull, test and push
+      - name: Docker image pull, document and test
         if: steps.docker.outputs.changed=='no'
         run: |
           make -s clean
