--- a/orthodocs/artifacts/800x600/Makefile
+++ b/orthodocs/artifacts/800x600/Makefile
@@ -3,7 +3,7 @@
 SIZE		:= $(notdir $(CURDIR))
 CURR_BASE	:= $(notdir $(CURDIR:/$(SIZE)=))
 PICTURES	:= fig_joints_front_view.png fig_joints_right_view.png fig_joints_top_view.png \
-	fig-TS15_section.png fig-TS35_section.png fig-TS35D_section.png
+	fig-TS15_section.png fig-TS35_section.png fig-TS35D_section.png fig-din_rails.png
 
 include $(FUNCTIONS)
 
@@ -27,6 +27,11 @@ fig-TS35_section.png: $(call test-deps,artifacts/din_rails)
 fig-TS35D_section.png: $(call test-deps,artifacts/din_rails)
 	$(call target-prologue)
 	$(call make-picture,$(SIZE),$(call top-view,-0.28,9.40,24.95,80),ortho)
+	$(call target-epilogue-success)
+
+fig-din_rails.png: $(call test-deps,artifacts/din_rails)
+	$(call target-prologue)
+	$(call make-picture,$(SIZE),$(call make-camera,38,7.5,25,50.10,0,19.40,173),,--render)
 	$(call target-epilogue-success)
 
 ###############################################################################
