added list sort tests

--- a/tests/foundation/lists-test.conf
+++ b/tests/foundation/lists-test.conf
@@ -50,4 +50,36 @@ let(
     ) first-second
   )
 ) assert(result==expected,result);
+
+//**** list sort **************************************************************
+
+// x-ascending sort of a 2d/3d point list
+let(
+  list      = [[-2,4],[-6,2],[1,10],[20,4],[15,7]],
+  result    = fl_list_sort(list,function(e1,e2) (e1.x-e2.x)),
+  expected  = [[-6,2],[-2,4],[1,10],[15,7],[20,4]]
+) echo(expected=expected) assert(result==expected,result);
+
+// x-descending sort of a 2d/3d point list
+let(
+  list      = [[-2,4],[-6,2],[1,10],[20,4],[15,7]],
+  result    = fl_list_sort(list,function(e1,e2) (e2.x-e1.x)),
+  expected  = [[20,4],[15,7],[1,10],[-2,4],[-6,2]]
+) echo(expected=expected) assert(result==expected,result);
+
+//**** median index ***********************************************************
+
+// median x-index of an odd unordered 2d/3d point list
+let(
+  list      = [[-2,4],[-6,2],[1,10],[20,4],[15,7]],
+  result    = fl_list_medianIndex(list),
+  expected  = 2
+) echo(expected=expected) assert(result==expected,result);
+
+// median x-index of an even 2d/3d point list
+let(
+  list      = [[-2,4],[-6,2],[20,4],[15,7]],
+  result    = fl_list_medianIndex(list),
+  expected  = 1
+) echo(expected=expected) assert(result==expected,result);
 "
