Implemented debug parameter for module fl_bentPlate.

--- a/tests/foundation/profile-test.conf
+++ b/tests/foundation/profile-test.conf
@@ -33,8 +33,6 @@ TAB_Verbs="
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
-// adds a footprint to scene, usually a simplified FL_ADD
-\$FL_FOOTPRINT = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 
 # TAB_Placement="
@@ -76,16 +74,11 @@ SECTION = \"L\"; // [E, L, T, U]
 # "
 
 TEST_CODE="
-verbs=[
-  if (\$FL_ADD!=\"OFF\")       FL_ADD,
-  if (\$FL_AXES!=\"OFF\")      FL_AXES,
-  if (\$FL_BBOX!=\"OFF\")      FL_BBOX,
-  if (\$FL_FOOTPRINT!=\"OFF\") FL_FOOTPRINT,
-];
+verbs   = fl_verbList([FL_ADD,FL_AXES,FL_BBOX]);
 radius  = RADIUS!=0 ? RADIUS : undef;
 
 if (TYPE==\"Profile\")
   fl_profile(verbs,type=SECTION,size=SIZE,thick=T,radius=radius,material=\$fl_filament,octant=octant,direction=direction);
 else
-  fl_bentPlate(verbs,type=SECTION,size=SIZE,thick=T,radius=radius,material=\$fl_filament,octant=octant,direction=direction);
+  fl_bentPlate(verbs,type=SECTION,size=SIZE,thick=T,radius=radius,material=\$fl_filament,octant=octant,direction=direction,debug=debug);
 "
