--- a/orthodocs/foundation/256x256/Makefile
+++ b/orthodocs/foundation/256x256/Makefile
@@ -16,14 +16,14 @@ all: $(TARGETS)
 fig_2d_frame.png: $(TESTS)/foundation/square-test.scad
 	$(call target-prologue)
 	@source $(TESTS)/foundation/square-test.conf && $(SCAD) --imgsize 9600,9600 -d $(@:.png=.deps) -o unscaled-$@ --p $(TESTS)/foundation/square-test.json --P $(@:.png=) $$CAMERA $$PROJECTION --ofl-script $<
-	@convert unscaled-$@ -resize $(SIZE) $@
+	@$(IMCMD) unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
 	$(call target-epilogue-success)
 
 %.png: %.scad
 	$(call target-prologue)
 	@$(SCAD) --imgsize 9600,9600 -d $(@:.png=.deps) -o unscaled-$@ --ofl-script $<
-	@convert unscaled-$@ -resize $(SIZE) $@
+	@$(IMCMD) unscaled-$@ -resize $(SIZE) $@
 	@rm unscaled-$@
 	$(call target-epilogue-success)
 
