--- a/tests/vitamins/Makefile
+++ b/tests/vitamins/Makefile
@@ -6,9 +6,9 @@
 #
 # SPDX-License-Identifier: GPL-3.0-or-later
 
-T_LIST			= countersinks ether fans generic hd hdmi heatsink iec jack \
-knurl_nuts magnet pcb pcb_adapter pcb_custom pcb_frame pcb_import pcb_proxy \
-pin_header psu sata sata-adapter screw sd spdt switch trimpot usb
+T_LIST	= countersinks ether fans generic hd hdmi heatsink iec jack knurl_nuts \
+magnet pcb pcb_adapter pcb_custom pcb_frame pcb_import pcb_proxy pin_header \
+psu sata sata-adapter screw sd spdt switch trimpot usb
 
 SOURCES			= $(foreach t,$(T_LIST),$(t)-test.scad)
 RESULTS			= $(foreach t,$(T_LIST),$(t)-test.echo)
@@ -17,12 +17,7 @@ include $(FUNCTIONS) $(DEF_RULES)
 
 .PRECIOUS: $(SOURCES)
 
-top:
-	@$(MAKE) -C $(realpath ../..) tests/vitamins/sources
-
 sources: $(SOURCES)
-
-last: $(word $(words $(RESULTS)),$(RESULTS))
 
 runs: clean-results $(RESULTS)
 
@@ -30,7 +25,6 @@ clean: clean-results
 	$(call aggregate-prologue)
 	@for f in $(SOURCES) ; do rm -f $$f ; done
 	$(call aggregate-epilogue)
-#	@echo "$(SOURCES): DELETED"
 
 clean-results:
 	$(call aggregate-prologue)
