Improved ruthex data download

--- a/lib/OFL/vitamins/ruthex/Makefile
+++ b/lib/OFL/vitamins/ruthex/Makefile
@@ -1,36 +1,56 @@
 include $(FUNCTIONS)
 
-all: m2x4p0.stl m2p5x5p7.stl m3x5p7.stl m4x8p1.stl m5x9p5.stl m6x12p7.stl \
-	m8x12p7.stl m3x4p0.stl m4x4p0.stl m5x5p8.stl
+all: m2x4p0.stl m2p5x5p7.stl m3x4p0.stl m3x5p7.stl m4x4p0.stl m4x8p1.stl \
+	m5x5p8.stl m5x9p5.stl m6x12p7.stl m8x12p7.stl
 
 m2x4p0.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M2x4.stl?v=1664141008 -o $@
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M2x4.stl?v=1664141008,$@)
+	@$(call target-epilogue-success)
 
 m2p5x5p7.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M2.5x5.7.stl?v=1664141019 -o $@
-
-m3x5p7.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M3x5_7.stl?v=1664141023 -o $@
-
-m4x8p1.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M4x8.1.stl?v=1664141030 -o $@
-
-m5x9p5.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M5x9.5.stl?v=1664141034 -o $@
-
-m6x12p7.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M6x12.7.stl?v=1664141041 -o $@
-
-m8x12p7.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M8x12.7.stl?v=1664141047 -o $@
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M2.5x5.7.stl?v=1664141019,$@)
+	@$(call target-epilogue-success)
 
 m3x4p0.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/ruthex_RX-M3x4.0_SHORT_v3.stl?v=1664140876 -o $@
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/ruthex_RX-M3x4.0_SHORT_v3.stl?v=1664140876,$@)
+	@$(call target-epilogue-success)
+
+m3x5p7.stl:
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M3x5_7.stl?v=1664141023,$@)
+	@$(call target-epilogue-success)
 
 m4x4p0.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/ruthex_RX-M4x4.0_SHORT_v2.stl?v=1664140900 -o $@
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/ruthex_RX-M4x4.0_SHORT_v2.stl?v=1664140900,$@)
+	@$(call target-epilogue-success)
+
+m4x8p1.stl:
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M4x8.1.stl?v=1664141030,$@)
+	@$(call target-epilogue-success)
 
 m5x5p8.stl:
-	@$(WGET) https://cdn.shopify.com/s/files/1/0567/7019/9760/files/ruthex_RX-M5x5.8_SHORT_v2.stl?v=1664140909 -o $@
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/ruthex_RX-M5x5.8_SHORT_v2.stl?v=1664140909,$@)
+	@$(call target-epilogue-success)
+
+m5x9p5.stl:
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M5x9.5.stl?v=1664141034,$@)
+	@$(call target-epilogue-success)
+
+m6x12p7.stl:
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M6x12.7.stl?v=1664141041,$@)
+	@$(call target-epilogue-success)
+
+m8x12p7.stl:
+	@$(call target-prologue)
+	@$(call wget,https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-M8x12.7.stl?v=1664141047,$@)
+	@$(call target-epilogue-success)
 
 # https://cdn.shopify.com/s/files/1/0567/7019/9760/files/RX-1_4-20x12.7.stl?v=1664141057
