--- a/tests/vitamins/countersinks-test.conf
+++ b/tests/vitamins/countersinks-test.conf
@@ -35,6 +35,8 @@ TAB_Verbs="
 \$FL_AXES      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 // adds a bounding box containing the object
 \$FL_BBOX      = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
+// adds a footprint to scene, usually a simplified FL_ADD
+\$FL_FOOTPRINT = \"OFF\";  // [OFF,ON,ONLY,DEBUG,TRANSPARENT]
 "
 
 # TAB_Placement="
@@ -58,10 +60,11 @@ TAB_TEST="
 /* [Countersink] */
 
 TOLERANCE = 0;  // [0:0.1:1]
+// thickness
+T         = 0;  // [0:0.1:5]
 TYPE      = \"ISO\";  // [ISO,UNI]
 // 'ALL' for complete dictionary, nominal size for single display
 SIZE      = \"ALL\";
-GAP       = 5;
 "
 
 # TEST_PROLOGUE="
@@ -81,17 +84,33 @@ module label(str, scale = 0.25, valign = \"baseline\", halign = \"left\")
         scale(scale)
           text(str, valign = valign, halign = halign, font=\"Symbola:style=Regular\");
 
-dictionary = TYPE==\"ISO\"?FL_CS_ISO_DICT:FL_CS_UNI_DICT;
-verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX]);
+dictionary  = TYPE==\"ISO\"?FL_CS_ISO_DICT:FL_CS_UNI_DICT;
+verbs       = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_FOOTPRINT]);
+gap         = 5;
+
 if (SIZE!=\"ALL\") {
   cs = fl_cs_search(dictionary=dictionary,d=fl_atof(SIZE))[0];
   assert(cs,str(\"No M\",SIZE,\" \",TYPE,\" countersink found.\"))
-    fl_countersink(verbs,cs,tolerance=TOLERANCE,octant=octant,direction=direction);
+    fl_countersink(
+      verbs,
+      cs,
+      octant=octant,
+      direction=direction,
+      \$fl_tolerance=TOLERANCE,
+      \$fl_thickness=T
+    );
 } else
-  fl_layout(axis=X,gap=GAP,types=dictionary) {
+  fl_layout(axis=X,gap=gap,types=dictionary) {
     let(delta=fl_bb_size(\$item).y/2+2)
-      translate(+Y(delta))
-        label(str(\"M\",fl_cs_nominal(\$item)),halign=\"center\");
-    fl_countersink(verbs,\$item,tolerance=TOLERANCE,octant=octant,direction=direction);
+      translate(-Y(delta))
+        label(str(\"M\",fl_nominal(\$item)),halign=\"center\");
+    fl_countersink(
+      verbs,
+      \$item,
+      octant=octant,
+      direction=direction,
+      \$fl_tolerance=TOLERANCE,
+      \$fl_thickness=T
+    );
   }
 "
