--- a/tests/skeleton-2d.conf
+++ b/tests/skeleton-2d.conf
@@ -1,3 +1,13 @@
+#
+# Base configuration for 2d tests
+#
+# This file is part of the 'OpenSCAD Foundation Library' (OFL) project.
+#
+# Copyright © 2021, Giampiero Gabbiani <giampiero@gabbiani.org>
+#
+# SPDX-License-Identifier: GPL-3.0-or-later
+#
+
 # TEST_DESCRIPTION=""
 
 TEST_TEMPLATE="template-2d.scad"
