--- a/tests/skeleton-nogui.conf
+++ b/tests/skeleton-nogui.conf
@@ -1,5 +1,5 @@
 #
-# Base for writing NOGUI configurations
+# Base configuration for NOGUI tests
 #
 # This file is part of the 'OpenSCAD Foundation Library' (OFL) project.
 #
