fixed bug in pcb-test.conf

--- a/tests/vitamins/pcb-test.conf
+++ b/tests/vitamins/pcb-test.conf
@@ -98,7 +98,7 @@ single  = fl_pcb_select(TYPE);
 module test() {
   module pcb(type) {
     fl_pcb(verbs,type,
-      direction=direction,octant=octant,thick=T,cut_tolerance=TOLERANCE,components=comps,cut_direction=co_direction,debug=debug)
+      direction=direction,octant=octant,thick=T,\$fl_tolerance=TOLERANCE,components=comps,cut_direction=co_direction,debug=debug)
       children();
   }
 
