--- a/tests/vitamins/pcb_proxy-test.conf
+++ b/tests/vitamins/pcb_proxy-test.conf
@@ -117,5 +117,5 @@ frame = fl_pcb_Frame(pcb,d=D,faces=FACE_T,wall=WALL,overlap=[WIDE_OVER,THIN_OVER
 
 
 fl_pcb(verbs,PROXY?frame:pcb,
-    direction=direction,octant=octant,thick=T,cut_tolerance=TOLERANCE,components=comps,cut_direction=co_direction,debug=debug);
+    direction=direction,octant=octant,thick=T,\$fl_tolerance=TOLERANCE,components=comps,cut_direction=co_direction,debug=debug);
 "
