--- a/tests/vitamins/iec-test.conf
+++ b/tests/vitamins/iec-test.conf
@@ -88,6 +88,6 @@ iec   = fl_switch(IEC, [
     [\"OUTLET\",                        FL_IEC_OUTLET],
   ]);
 
-fl_iec(verbs,iec,thick=thick,direction=direction,octant=octant)
-  fl_cylinder(h=10,r=screw_radius(\$iec_screw),octant=-Z);
+fl_iec(verbs,iec,direction=direction,octant=octant,\$fl_thickness=thick)
+  fl_cylinder(verbs=[FL_ADD,FL_AXES],h=10,r=screw_radius(\$iec_screw),octant=-Z,\$FL_ADD=\$FL_LAYOUT,\$FL_AXES=\"ON\");
 "
