New parameter --must-fail added to make-test.py in place of the command assert.py

--- a/tests/warn1-test.conf
+++ b/tests/warn1-test.conf
@@ -2,7 +2,7 @@ TEST_DESCRIPTION="This test generates a warn"
 
 TEST_TEMPLATE="template-nogui.scad"
 
-TEST_PROLOGUE="$PROLOGUE_NOGUI"
+TEST_PROLOGUE=""
 
 TEST_CODE="
 variable=not_existent;
