--- a/docs/800x600/Makefile
+++ b/docs/800x600/Makefile
@@ -13,8 +13,9 @@ all:	cover.png
 
 cover.png: $(EXAMPLES)/sbc-box.scad $(EXAMPLES)/sbc-box.json
 	$(call target-prologue)
-	@$(SCAD) --imgsize "3200,2400" --p $(EXAMPLES)/sbc-box.json --P cover --camera "7.62939e-7,0,11.925,68.3,0,320.5,281.12" -o /tmp/unscaled-$@ --ofl-script $(EXAMPLES)/sbc-box.scad
-	@$(IMCMD) /tmp/unscaled-$@ -resize $(SIZE) $@
+	echo "cover.png SCAD: $(SCAD)"
+	$(SCAD) --imgsize "3200,2400" --p $(EXAMPLES)/sbc-box.json --P cover --camera "7.62939e-7,0,11.925,68.3,0,320.5,281.12" -o /tmp/unscaled-$@ --ofl-script $(EXAMPLES)/sbc-box.scad
+	$(IMCMD) /tmp/unscaled-$@ -resize $(SIZE) $@
 	@rm -f /tmp/unscaled-$@
 	$(call target-epilogue-success)
 
