--- a/tests/foundation/core-comparison-test.conf
+++ b/tests/foundation/core-comparison-test.conf
@@ -45,7 +45,7 @@ translate(T_ofl) {
   } else if (PRIMITIVE==\"fl_square vs square\") {
     fl_square([FL_ADD,FL_AXES],[1,1]);
   } else if (PRIMITIVE==\"fl_cube vs cube\") {
-    fl_cube([FL_ADD,FL_AXES],[1,1,1]);
+    fl_cube([FL_ADD,FL_AXES],size=[1,1,1]);
   } else if (PRIMITIVE==\"fl_sphere vs sphere\") {
     fl_sphere([FL_ADD,FL_AXES],d=[1,1,1]);
   }
