--- a/tests/foundation/type_trait-test.conf
+++ b/tests/foundation/type_trait-test.conf
@@ -9,8 +9,6 @@ include <../../lib/OFL/foundation/unsafe_defs.scad>
 "
 
 TEST_CODE="
-fl_status();
-
 assert(fl_tt_isInDictionary(\"inexistent\",[\"key1\",\"key2\",\"key3\"])==false);
 assert(fl_tt_isInDictionary(\"key2\",[\"key1\",\"key2\",\"key3\"]));
 
@@ -121,7 +119,11 @@ let(
 
 let(
   bbox = [[0, 0], [100, 100]]
-) assert(fl_tt_isBoundingBox(bbox),bbox);
+) assert(!fl_tt_isBoundingBox(bbox),bbox);
+
+let(
+  bbox = [[0, 0], [100, 100]]
+) assert(fl_tt_isBoundingBox(bbox,2d=true),bbox);
 
 let(
   p = [1]
