--- a/tests/foundation/3d-test.conf
+++ b/tests/foundation/3d-test.conf
@@ -28,11 +28,9 @@ N     = 3; // [3:10]
 TEST_CODE="
 verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX]);
 
-fl_trace(\"octant\",octant);
-
-if      (SHAPE == \"cube\"    )  fl_cube(verbs,size=SIZE,debug=debug,octant=octant,direction=direction);
-else if (SHAPE == \"sphere\"  )  fl_sphere(verbs,d=SIZE,debug=debug,octant=octant,direction=direction);
-else if (SHAPE == \"cylinder\")  fl_cylinder(verbs,d1=SIZE.x,d2=SIZE.y,h=SIZE.z,debug=debug,octant=octant,direction=direction);
-else if (SHAPE == \"prism\"   )  fl_prism(verbs,n=N,l1=SIZE.x,l2=SIZE.y,h=SIZE.z,debug=debug,octant=octant,direction=direction);
-else if (SHAPE == \"pyramid\" )  fl_pyramid(verbs,[[-1,-1],[+1,-1],[+1,+1],[-1,+1]], [0,0,2],debug=debug,octant=octant,direction=direction);
+if      (SHAPE == \"cube\"    )  fl_cube(verbs,size=SIZE,octant=octant,direction=direction,debug=debug);
+else if (SHAPE == \"sphere\"  )  fl_sphere(verbs,d=SIZE,octant=octant,direction=direction,debug=debug);
+else if (SHAPE == \"cylinder\")  fl_cylinder(verbs,d1=SIZE.x,d2=SIZE.y,h=SIZE.z,octant=octant,direction=direction,debug=debug);
+else if (SHAPE == \"prism\"   )  fl_prism(verbs,n=N,l1=SIZE.x,l2=SIZE.y,h=SIZE.z,octant=octant,direction=direction,debug=debug);
+else if (SHAPE == \"pyramid\" )  fl_pyramid(verbs,base=[[-1,-1],[+1,-1],[+1,+1],[-1,+1]],apex=[0,0,2],octant=octant,direction=direction,debug=debug);
 "
