--- a/tests/vitamins/iec-test.conf
+++ b/tests/vitamins/iec-test.conf
@@ -63,7 +63,8 @@ TAB_TEST="
 
 IEC = \"INLET\";  // [FUSED_INLET,FUSED_INLET2,320_C14_SWITCHED_FUSED_INLET,INLET,INLET_ATX,INLET_ATX2,YUNPEN,OUTLET]
 // thickness for FL_CUTOUT and FL_DRILL
-T   = 2.5;      // [0:0.5:5]
+THICK   = 2.5;      // [0:0.5:5]
+TOLERANCE = 0.2;  // [0:0.1:1]
 "
 
 # TEST_PROLOGUE="
@@ -75,8 +76,8 @@ T   = 2.5;      // [0:0.5:5]
 # "
 
 TEST_CODE="
-verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,,FL_LAYOUT,FL_MOUNT]);
-thick = \$FL_CUTOUT!=\"OFF\"||\$FL_DRILL ? T : undef;
+verbs = fl_verbList([FL_ADD,FL_AXES,FL_BBOX,FL_CUTOUT,FL_DRILL,FL_LAYOUT,FL_MOUNT]);
+thick = \$FL_CUTOUT!=\"OFF\"||\$FL_DRILL!=\"OFF\" ? THICK : undef;
 iec   = fl_switch(IEC, [
     [\"FUSED_INLET\",                   FL_IEC_FUSED_INLET],
     [\"FUSED_INLET2\",                  FL_IEC_FUSED_INLET2],
@@ -88,6 +89,6 @@ iec   = fl_switch(IEC, [
     [\"OUTLET\",                        FL_IEC_OUTLET],
   ]);
 
-fl_iec(verbs,iec,direction=direction,octant=octant,\$fl_thickness=thick)
+fl_iec(verbs,iec,direction=direction,octant=octant,\$fl_thickness=thick,\$fl_tolerance=TOLERANCE)
   fl_cylinder(verbs=[FL_ADD,FL_AXES],h=10,r=screw_radius(\$iec_screw),octant=-Z,\$FL_ADD=\$FL_LAYOUT,\$FL_AXES=\"ON\");
 "
