--- a/orthodocs/Makefile
+++ b/orthodocs/Makefile
@@ -1,13 +1,10 @@
 # ODOX		:= orthodocs --verbosity error
-ODOX		:= orthodocs --verbosity off
-# ODOX		:= orthodocs
+# ODOX		:= orthodocs --verbosity off
+ODOX		:= orthodocs
 # ODOX		:= orthodocs --verbosity debug
 DOC_ROOT	:= $(CURDIR)
 
 # .PHONY: pics
-
-top:
-	@$(MAKE) -C $(realpath ..) orthodocs/all
 
 include $(FUNCTIONS)
 
@@ -15,8 +12,8 @@ all: api-docs artifacts/all foundation/all vitamins/all
 
 api-docs: $(LIB_SOURCES)
 	$(call target-prologue)
-	@$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
-	@touch $@
+	$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
+	touch $@
 	$(call target-epilogue-success)
 
 artifacts/%:
