--- a/tests/foundation/polymorphic-test.conf
+++ b/tests/foundation/polymorphic-test.conf
@@ -128,7 +128,7 @@ iec = let(
   fl_engine(value=\"iec\"),
 ];
 
-fl_polymorph(verbs,iec,octant,direction)
+fl_polymorph(verbs,iec,octant=octant,direction=direction)
   engine(thick=T)
     fl_cylinder(h=10,r=screw_radius(\$iec_screw),octant=-Z);
 "
