--- a/orthodocs/Makefile
+++ b/orthodocs/Makefile
@@ -2,6 +2,7 @@
 # ODOX		:= orthodocs --verbosity off
 ODOX		:= orthodocs
 # ODOX		:= orthodocs --verbosity debug
+# ODOX		:= orthodocs --verbosity warn
 DOC_ROOT	:= $(CURDIR)
 
 # .PHONY: pics
@@ -12,7 +13,7 @@ all: api-docs artifacts/all foundation/all vitamins/all
 
 api-docs: $(LIB_SOURCES)
 	$(call target-prologue)
-	$(ODOX) --verbosity off --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
+	$(ODOX) --src-root $(LIB_ROOT) --doc-root $(DOC_ROOT) --admonitions --toc --ignore-prefix fl_ '$$fl_' --pkg-deps graph --graphs . $(LIB_DIRS) -- $(LIB_DIRS) dxf.scad library.scad
 	touch $@
 	$(call target-epilogue-success)
 
