--- a/tests/vitamins/sata-test.conf
+++ b/tests/vitamins/sata-test.conf
@@ -57,9 +57,6 @@ TAB_Verbs="
 
 TAB_TEST="
 /* [Sata] */
-// TODO: see comment on sata.scad
-SW_SHELL    = true;
-CONTACTS    = true;
 CONNECTORS  = false;
 PART        = \"data plug\"; // [data plug,power plug,power data plug,power data socket]
 "
@@ -73,5 +70,5 @@ type  = PART==\"data plug\"       ? FL_SATA_DATAPLUG
       : PART==\"power data plug\" ? FL_SATA_POWERDATAPLUG
       : FL_SATA_POWERDATASOCKET;
 
-fl_sata(verbs,type,connectors=CONNECTORS,shell=SW_SHELL,octant=octant,direction=direction);
+fl_sata(verbs,type,connectors=CONNECTORS,octant=octant,direction=direction);
 "
